# sa2-chao-fucking-explode

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
art/: YouTube.kra
include/: chao_functions.h  chao_types.h  config.h  extra_math.h  globals.h
mod/: configschema.xml  mod.ini
src/: chao_functions.cpp  config.cpp  extra_math.cpp  globals.cpp  hooks.cpp  main.cpp
